correct typo (clim_techoptimist)

--- a/data/survey_questions.yaml
+++ b/data/survey_questions.yaml
@@ -43,7 +43,7 @@
     4 Sterkt
     5 Svært sterkt
 
-- id: clim_techopimist
+- id: clim_techoptimist
   text: |
     Teknologiske nyvinninger kommer til å løse klimaproblemene.
     Velg ett svar:
